tests/fail/redirect_conflict_merge_capture.msh
# Conflict: stderr merged to stdout, then stderr capture must error
[ls] 2>&1 ^ ;
